--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,23 +1,25 @@
+/* src/styles/main.scss */
 .main-container {
     padding: 20px;
-    background-color: #f4f4f4;
   }
   
   .navbar {
     background-color: #333;
-    color: white;
     padding: 10px;
+    text-align: center;
   }
   
   .navbar-link {
     color: white;
     text-decoration: none;
-    margin: 10px;
+    font-size: 1.2rem;
+  }
+  
+  .navbar-link:hover {
+    text-decoration: underline;
   }
   
   .product-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    padding-top: 20px;
   }
   
