--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,25 +1,37 @@
 /* src/styles/main.scss */
 .main-container {
-    padding: 20px;
-  }
-  
-  .navbar {
-    background-color: #333;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .navbar-link {
-    color: white;
-    text-decoration: none;
-    font-size: 1.2rem;
-  }
-  
-  .navbar-link:hover {
-    text-decoration: underline;
-  }
-  
-  .product-list {
-    padding-top: 20px;
-  }
-  
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  background-color: #f4f4f4;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+}
+
+.navbar-link {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.navbar-link:hover {
+  text-decoration: underline;
+}
+
+.product-list {
+  margin-top: 20px;
+}
+
+.product-list h2 {
+  font-size: 24px;
+  color: #333;
+}
+
+.product-list p {
+  color: #888;
+}
